--- a/style.css
+++ b/style.css
@@ -1,23 +1,15 @@
 body {
-    background: rgb(58,58,58);
-    color: white;
-    font-family: Helvetica-neue, Helvetica, Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  header {
-    background: black;
-    padding: 20px;
-  }
-  
-  section {
-    background: white;
-    color: gray;
-    padding: 20px;
-  }
-  
-  footer {
-    background: black;
-    padding: 10px 20px;
-  }
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline-block;
+  margin-right: 20px;
+}
